# manipulator_project

./: CMakeLists.txt  README.md
config/: urdf_config.rviz
config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
config/install/moveit_robot_config/share/moveit_robot_config/: package.bash
config/install/robot_moveit_config/share/robot_moveit_config/: .setup_assistant
config/log/: latest_build
config/moveit_robot_config/: CMakeLists.txt
config/moveit_robot_config/config/: initial_positions.yaml  manipulator_robot.srdf
config/moveit_robot_config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
config/moveit_robot_config/launch/install/: setup.bash
config/moveit_robot_config/launch/log/: latest_build
config/moveit_robot_config/log/: latest_build
config/robot2_moveit_config/: .setup_assistant
config/robot2_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  manipulator_robot2.ros2_control.xacro  manipulator_robot2.srdf  moveit_controllers.yaml  ros2_controllers.yaml
config/robot2_moveit_config/launch/: setup_assistant.launch.py
config/robot_moveit_config/launch/: moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
config/robot_moveit_config/log/: latest_build
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/manipulator_project/lib/manipulator_project/: move_group  move_robot  move_to_pose_service_node
install/manipulator_project/share/manipulator_project/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/manipulator_project/share/manipulator_project/launch/: move_robot.launch.py  rviz_urdf_check.launch.py  simulation.launch.py  start_service.launch.py
install/manipulator_project/share/manipulator_project/robot2_moveit_config/: package.xml
install/manipulator_project/share/manipulator_project/urdf/: manipulator_model.urdf.xacro  (+1 more)
launch/: move_robot.launch.py  rviz_urdf_check.launch.py  simulation.launch.py  start_service.launch.py
log/: latest_build
robot2_moveit_config/: CMakeLists.txt
robot2_moveit_config/config/: manipulator_robot2.ros2_control.xacro  manipulator_robot2.urdf.xacro
robot2_moveit_config/install/: setup.ps1  setup.sh  setup.zsh
robot2_moveit_config/launch/: demo.launch.py  rsp.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/: move_group.cpp  move_robot.cpp  move_robot_old.cpp  move_to_pose_service_node.cpp
src/manipulator_interfaces/: CMakeLists.txt  package.xml
src/manipulator_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/manipulator_interfaces/log/: latest_build
urdf/: manipulator_model.urdf.xacro  manipulator_model2.urdf.xacro
urdf/install/: setup.sh
(+130 files in other folders)
